tests/errors/mixed_match.vrv
type test { F() G() }
match F() {
  F() => 1
  G() => "foo"
}
